--- a/moviepy/meta.yaml
+++ b/moviepy/meta.yaml
@@ -3,7 +3,8 @@ package:
   version: "0.2.2.11.3"
 
 source:
-  git_url: https://github.com/livingbio/moviepy.git
+  # git_url: https://github.com/livingbio/moviepy.git
+  git_url: https://github.com/fortunto2/moviepy.git
 
 # build:
   # noarch_python: True
@@ -19,7 +20,8 @@ source:
 
   # If this is a new build for the same version, increment the build
   # number. If you do not include this key, it defaults to 0.
-  # number: 2
+build:
+  number: 2
 
 requirements:
   build:
