--- a/opencv/meta.yaml
+++ b/opencv/meta.yaml
@@ -8,7 +8,7 @@ source:
   sha1: 0c6e4d890f6252ae8feae0c92f397f63aaa41a08
 
 build:
-  number: 1
+  number: 2
 
 requirements:
   build:
@@ -16,11 +16,21 @@ requirements:
    - cmake 3.6.3
    - numpy
    - eigen 3.2.2
+   - jpeg
+   - zlib
+   - libpng
+   - ffmpeg
+   - libtiff
 
   run:
    - python 2.7*
    - numpy
    - libgcc
+   - jpeg
+   - zlib
+   - libpng
+   - ffmpeg
+   - libtiff
 
 test:
   imports:
