--- a/moviepy/meta.yaml
+++ b/moviepy/meta.yaml
@@ -1,10 +1,10 @@
 package:
   name: moviepy
-  version: "0.2.2.11.3"
+  version: "0.2.3.1"
 
 source:
-  # git_url: https://github.com/livingbio/moviepy.git
-  git_url: https://github.com/fortunto2/moviepy.git
+  #git_url: https://github.com/fortunto2/moviepy.git
+   git_url: https://github.com/Zulko/moviepy.git
 
 # build:
   # noarch_python: True
